# SeedAgent

./: .gitignore  ARCHITECTURE_HISTORY.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/agent-bench/: Cargo.toml
crates/agent-bench/benches/: perf_claims.rs
crates/agent-bench/src/: lib.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: display.rs  doctor.rs  main.rs  plan_repoprompt.rs
crates/agent-cli/src/commands/: codex.rs  codex_session.rs  eval.rs  exec.rs  interactive.rs  llm.rs  mod.rs  plan.rs  replay.rs  rp.rs  run.rs  run_planners.rs  skill.rs  tool.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs  session.rs
crates/agent-core/src/tui/: info.rs  mod.rs  style.rs
crates/agent-delegate/: Cargo.toml
crates/agent-delegate/src/: lib.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: lib.rs
crates/agent-memory/: Cargo.toml
crates/agent-memory/src/: lib.rs
crates/agent-plan/: Cargo.toml
crates/agent-plan/src/: lib.rs
crates/agent-repoprompt/: Cargo.toml
crates/agent-repoprompt/src/: lib.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: lib.rs
crates/agent-session/: Cargo.toml
crates/agent-session/src/: lib.rs
crates/agent-skills/: Cargo.toml
crates/agent-skills/src/: lib.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/descriptions/: ask_user.md  complete_long_term_update.md  memory_fetch.md  memory_search.md  patch_file.md  plan_complete.md  plan_create.md  plan_create_from_repoprompt.md  plan_create_via_repoprompt.md  plan_list.md  plan_next.md  plan_record_artifact.md  plan_record_handoff.md  plan_refine_via_repoprompt.md  plan_status.md  plan_verify.md  read_file.md  read_files.md  repoprompt_call.md  repoprompt_codemap.md  repoprompt_exec.md  repoprompt_file_search.md  repoprompt_git.md  repoprompt_tools.md  run_shell.md  skill_fetch.md  skill_list.md  skill_search.md  spawn_subagent.md  spawn_subagent_map.md  start_long_term_update.md  subagent_nudge.md  tool_describe.md  update_working_checkpoint.md  write_file.md
crates/agent-tools/src/: ask_user.rs  files.rs  lib.rs  memory.rs  memory_protocol.rs  plan.rs  repoprompt_bridge.rs  shell.rs  skills.rs  subagent.rs  sync.rs  tool_describe.rs  walk.rs
crates/agent-tui/: Cargo.toml
crates/agent-tui/src/: lib.rs  spinner.rs
evals/: 01_count_crates.toml  02_find_msrv.toml  03_naming_convention.toml  04_largest_crate_loc.toml  05_count_planner_backends.toml  06_walker_crate_name.toml  07_judge_codebase_summary.toml  08_judge_test_count.toml  09_workflow_find_panics.toml  10_workflow_list_serde_structs.toml  11_workflow_describe_tool_pattern.toml
memory/: global_facts.md  memory_management_sop.md  meta_rules.md
skills/l3-settlement-smoke/: SKILL.md
skills/repoprompt-deep-plan/: SKILL.md
skills/repoprompt-investigate/: SKILL.md
skills/repoprompt-review/: SKILL.md
