[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
agent-core.workspace = true
agent-memory.workspace = true
agent-plan.workspace = true
agent-repoprompt.workspace = true
agent-skills.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
wait-timeout.workspace = true
